<resources>
	<string name="app_name">Gank.io</string>
	<string name="action_settings">Settings</string>
	<string name="retry">重试</string>
	<string name="connection_fail">连接失败</string>
	<string name="connection_fail_and_on_click_retry">连接失败, 點擊重試。</string>
	<string name="no_more">已經全部加載完成</string>
	<string name="home">分期內容</string>
	<string name="福利">福利</string>
	<string name="android">Android</string>
	<string name="ios">iOS</string>
	<string name="前端">前端</string>
	<string name="app">App</string>
	<string name="瞎推荐">瞎推荐</string>
	<string name="拓展资源">拓展资源</string>
	<string name="movie">休息视频</string>
	<string name="by">by %s</string>
	<string name="search">搜索</string>
	<string name="category">類別</string>
	<string name="share">分享</string>
	<string name="share_title">分享到…</string>
	<string name="latest_content">最新内容</string>
	<string name="more">MORE</string>

	<string-array name="categorical">
		<item>最新内容</item>
		<item>@string/福利</item>
		<item>@string/android</item>
		<item>@string/ios</item>
		<item>@string/前端</item>
		<item>@string/app</item>
		<item>@string/瞎推荐</item>
		<item>@string/拓展资源</item>
		<item>@string/movie</item>
	</string-array>
</resources>
