<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home"
			android:title="最新内容"
			/>
		<item
			android:id="@+id/nav_category"
			android:icon="@drawable/ic_home"
			android:title="@string/home"
			/>
		<item
			android:id="@+id/nav_android"
			android:icon="@drawable/ic_android"
			android:title="@string/android"
			/>
		<item
			android:id="@+id/nav_ios"
			android:icon="@drawable/ic_apple"
			android:title="@string/ios"
			/>
		<item
			android:id="@+id/nav_前端"
			android:icon="@drawable/ic_html5"
			android:title="@string/前端"
			/>
		<item
			android:id="@+id/nav_apps"
			android:icon="@drawable/ic_apps"
			android:title="@string/app"
			/>
		<item
			android:id="@+id/nav_瞎推荐"
			android:icon="@drawable/ic_grade"
			android:title="@string/瞎推荐"
			/>
		<item
			android:id="@+id/nav_拓展资源"
			android:icon="@drawable/ic_explore"
			android:title="@string/拓展资源"
			/>
		<item
			android:id="@+id/nav_movie"
			android:icon="@drawable/ic_movie"
			android:title="@string/movie"
			/>
	</group>
</menu>